# transtream

./: .env.production  .gitignore  Cargo.toml  README.md  client.html  config.go  config.json  go.mod  go.sum  golang.html  handlers.go  main.go  manifest.m3u8  mjpeg.html  package-lock.json  package.json  rtsp.md  script.js  server.js  session  ssg.html  state.go  stream.go  stream.sdp  transcode.sh  video.ts  websocket.html
app/: Home.tsx  page.tsx
client/: index.html  package-lock.json  package.json
client/src/: App.js
client/src/app/: layout.tsx  page.tsx
client/src/app/canvas/: page.tsx
client/src/app/media/: page.tsx
client/src/app/video/: page.tsx
client/src/lib/: env.ts  index.ts
ffmpeg-wasm/: package-lock.json
next-vlc/: package-lock.json  package.json
server/: Cargo.toml  config.go  go.mod  go.sum  handler.go  handlers.go  main.go  main.py  middleware.go  multi.go  single.go  socket.go  state.go  stream.go  types.go
server/src/: config.rs  main.rs
server/src/api/: handler.rs  service.rs
src/: main.rs
webm/: err.http.md  okk.file.md
