[package]
name = "server"
version = "0.1.0"
authors = ["jan"]
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
hyper = "1.5.2"
futures = "0.3.5"
tokio = { version = "1.43.0", features = ["full"] }
rusqlite = { version = "0.33.0", features = ["bundled", "backup"] }
regex = "1.3.9"
async-trait = "0.1.36"
bytes = "1.9.0"
hyper-tls = "0.6.0"