[package]
name = "server"
version = "0.1.0"
edition = "2021"
#edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
gstreamer = { version = "0.23.4" }
gstreamer-app = { version = "0.23.4" }
crossbeam-channel = { version = "0.5.14" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"